# ELNPack

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REUSE.toml  clippy.toml  dist-workspace.toml  release-plz.toml  rust-toolchain.toml
.githooks/: commit-msg  pre-commit  pre-push  validate-commit-msg.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  mdbook.yml  release-plz.yml  release.yml
.reuse/: dep5
docs/: mvu.md
docs/user-guide/: book.toml
docs/user-guide/src/: SUMMARY.md  attachments.md  datetime.md  installation.md  introduction.md  keywords.md  markdown.md  metadata.md  overview.md  quickstart.md  saving.md
scripts/: create_release.sh  install-git-hooks.sh
src/: archive.rs  attachments.rs  datetime_picker.rs  editor.rs  keywords.rs  main.rs  ui.rs  utils.rs
src/app/: mod.rs
src/logic/: eln.rs  mod.rs
src/models/: attachment.rs  extra_fields.rs  keywords.rs  mod.rs
src/mvu/: mod.rs
src/ui/: mod.rs
src/ui/components/: attachments.rs  datetime_picker.rs  extra_fields.rs  keywords.rs  markdown.rs  mod.rs  toggle.rs
src/utils/: file_icons.rs  hash.rs  mod.rs  sanitize_component.rs
