[package]
name = "elnpack"
version = "0.1.3"
edition = "2024"
description = "Lightweight electronic lab notebook (ELN) entry packager that creates .eln archives with Markdown notes, attachments, and RO-Crate metadata."
license = "MIT"
authors = ["Alexander Minges"]
repository = "https://github.com/Athemis/ELNPack"
homepage = "https://github.com/Athemis/ELNPack"
readme = "README.md"
keywords = ["science", "eln", "electronic-lab-notebook", "ro-crate", "research-data-management", "egui"]


[dependencies]
eframe = "0.33"
egui = "0.33"
egui_extras = { version = "0.33", features = ["datepicker", "chrono", "image", "svg"] }
rfd = "0.17"
zip = { version = "7.0", default-features = false, features = ["deflate"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
sha2 = "0.10"
mime_guess = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tiff", "gif", "webp"] }
pulldown-cmark = "0.13"
usvg = { version = "0.45", default-features = false, features = ["text"] }
crossbeam-channel = "0.5"
egui-phosphor = { version = "0.11", default-features = false, features = ["regular"] }
ammonia = "4.1"
deunicode = "1.6"
url = { version = "2", default-features = false, features = ["std"] }
uuid = { version = "1", features = ["v4"] }
email_address = "0.2"
open = "5"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
lto = "thin"
panic = "abort"
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
