[package]
name = "elnpack"
version = "0.1.4"
edition = "2024"
rust-version = "1.92.0"
description = "Lightweight electronic lab notebook (ELN) entry packager that creates .eln archives with Markdown notes, attachments, and RO-Crate metadata."
license = "MIT"
authors = ["Alexander Minges"]
repository = "https://github.com/Athemis/ELNPack"
homepage = "https://github.com/Athemis/ELNPack"
readme = "README.md"
keywords = ["science", "eln", "electronic-lab-notebook", "ro-crate", "research-data-management", "egui"]


[dependencies]
eframe = "0.34"
egui = "0.34"
egui_extras = { version = "0.34", features = ["datepicker", "image", "svg"] }
rfd = "0.17"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
sha2 = "0.11"
hex = "0.4"
mime_guess = "2.0"
anyhow = "1.0"
jiff = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tiff", "gif", "webp"] }
pulldown-cmark = "0.13"
# Keep resvg at 0.45.x to match egui_extras 0.34.x (prevents usvg version mismatch).
resvg = { version = "0.45", default-features = false }
crossbeam-channel = "0.5"
egui-phosphor = { version = "0.12", default-features = false, features = ["regular"] }
ammonia = "4.1"
deunicode = "1.6"
url = { version = "2", default-features = false, features = ["std"] }
uuid = { version = "1", features = ["v4"] }
email_address = "0.2"
open = "5"

[dev-dependencies]
tempfile = "3.27"

[profile.release]
lto = "thin"
panic = "abort"
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
